--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Swell-Animations Algorithm
+## Swell-Animations Algorithm
+This repo contains the backend which will generate the animation.
+
+### Usage:
+* Linux: make
